--- a/team_habr/requirements.txt
+++ b/team_habr/requirements.txt
@@ -1,84 +1,41 @@
-alembic==1.4.3
-appdirs==1.4.4
-asgiref==3.2.10
-astroid==2.4.2
-autopep8==1.5.4
-banal==1.0.1
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.4
+asgiref==3.3.4
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==3.2.1
-dataset==1.4.3
-defusedxml==0.7.0rc1
-distlib==0.3.1
-Django==3.1.2
+cryptography==3.4.7
+defusedxml==0.7.1
+Django==3.2
 django-cors-headers==3.7.0
-django-debug-toolbar==3.1.1
-django-debug-toolbar-template-profiler==2.0.1
-django-extensions==3.0.9
 django-filter==2.4.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
 drf-yasg==1.20.0
-filelock==3.0.12
 idna==2.10
 inflection==0.5.1
-isort==5.6.4
+install==1.3.4
 itypes==1.2.0
 Jinja2==2.11.3
-jsonpickle==2.0.0
-lazy-object-proxy==1.4.3
-Mako==1.1.3
-Markdown==3.3.4
 MarkupSafe==1.1.1
-mccabe==0.6.1
 oauthlib==3.1.0
 packaging==20.9
-parse==1.18.0
-Pillow==8.0.0
-pip-tools==5.3.1
+Pillow==8.2.0
 psycopg2-binary==2.8.6
-pycodestyle==2.6.0
 pycparser==2.20
-PyJWT==1.7.1
-pylint==2.6.0
+PyJWT==2.0.1
 pyparsing==2.4.7
-PyQt5==5.15.2
-pyqt5-plugins==5.15.2.2.0.1
-PyQt5-sip==12.8.1
-PyQt5-stubs==5.14.2.2
-pyqt5-tools==5.15.2.3
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-editor==1.0.4
-python-slugify==4.0.1
 python3-openid==3.2.0
-pytz==2020.1
-PyYAML==5.3.1
-qt5-applications==5.15.2.2.1
-qt5-tools==5.15.2.1.0.1
-requests==2.24.0
+pytz==2021.1
+requests==2.25.1
 requests-oauthlib==1.3.0
-ruamel.yaml==0.17.2
+ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 six==1.15.0
 social-auth-app-django==4.0.0
-social-auth-core==3.3.3
-SQLAlchemy==1.3.22
+social-auth-core==4.1.0
 sqlparse==0.4.1
-stuf==0.9.16
-tabulate==0.8.7
-text-unidecode==1.3
-toml==0.10.2
 uritemplate==3.0.1
-urllib3==1.25.11
-virtualenv==20.1.0
-waitress==1.4.4
-wrapt==1.12.1
-yapf==0.30.0
+urllib3==1.26.4
