--- a/team_habr/requirements.txt
+++ b/team_habr/requirements.txt
@@ -1,11 +1,14 @@
+appdirs==1.4.4
 asgiref==3.3.4
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+conda==4.3.16
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
+distlib==0.3.1
 Django==3.2
 django-cors-headers==3.7.0
 django-filter==2.4.0
@@ -14,6 +17,7 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
 drf-yasg==1.20.0
+filelock==3.0.12
 idna==2.10
 inflection==0.5.1
 install==1.3.4
@@ -23,7 +27,9 @@ MarkupSafe==1.1.1
 oauthlib==3.1.0
 packaging==20.9
 Pillow==8.2.0
+pipenv==2020.8.13
 psycopg2-binary==2.8.6
+pycosat==0.6.3
 pycparser==2.20
 PyJWT==2.0.1
 pyparsing==2.4.7
@@ -34,8 +40,11 @@ requests-oauthlib==1.3.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 six==1.15.0
+slugify==0.0.1
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.4
+virtualenv==20.0.31
+virtualenv-clone==0.5.4
