--- a/team_habr/requirements.txt
+++ b/team_habr/requirements.txt
@@ -30,6 +30,7 @@ psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.0.1
 pyparsing==2.4.7
+python-slugify==4.0.1
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
@@ -37,10 +38,10 @@ requests-oauthlib==1.3.0
 ruamel.yaml==0.17.4
 ruamel.yaml.clib==0.2.2
 six==1.15.0
-slugify==0.0.1
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
+text-unidecode==1.3
 uritemplate==3.0.1
 urllib3==1.26.4
 virtualenv==20.0.31
